[metadata]
name = undocinclude
version = attr: undocinclude.__version__
author = Sam Wilson
author_email = sam.wilson@mesh.xyz
description = Sphinx' literalinclude, but without docstrings
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SamWilsn/undocinclude
license_files =
    LICENSE.md
classifiers =
    License :: OSI Approved :: BSD License

[options]
package_dir =
    =src
packages = undocinclude
python_requires = >=3.7
install_requires =
    docutils>=0.14,<0.18
    sphinx>=4.0

[bdist_wheel]
universal = 1

# vim: set ft=dosini:
